# common_env

./: .clang-format  .gitattributes  .gitignore  .prettierrc  README.md
.github/workflows/: build.yml  test.yml
dev/c/: CMakeLists.txt  compile.sh  test.c
dev/cpp/: CMakeLists.txt  compile.sh  fs_test.cpp
readme/: README_app_git_bash.md  README_app_portableapps.md  README_git_guide.md  README_setup.md
scripts/: setup.sh  setup_internal.sh  setup_mac.sh
test/path/: pathAdd  pathRm
tools/: ini.bat  setup.cmd  setup.ini  setup_develop.cmd  setup_test.ini  ssl_allow.sh
tools/autohotkey/: hotkey.ahk  setup.sh
tools/bash/: setup.sh
tools/cmake/: setup.sh
tools/cmder/: ConEmu.xml  setup.sh
tools/cygwin/: setup.sh
tools/dbeaver/: setup.sh
tools/docker/: setup.sh
tools/elastic/: setup.sh
tools/gcloud/: gcloud_auth_plugin.cmd  gcloud_components.cmd  gcloud_update.cmd  setup.sh
tools/git/: .gitconfig  bash.cmd  mintty.cmd  setup.sh  test_git.sh
tools/gitbash/: bash.cmd  check_version.sh  setup.sh
tools/gradle/: setup.sh
tools/helper/: update_certificate.sh
tools/insomnia/: setup.sh
tools/intellijidea/: setup.sh  silent.config
tools/java/: setup.sh
tools/lens/: setup.sh
tools/mac/: setup_mac.sh
tools/make/: setup.sh
tools/mobaxterm/: MobaXterm.ini  setup.sh
tools/mongodbcompass/: setup.sh
tools/msys2/: setup.sh
tools/node/: setup.sh
tools/nvm/: setup.sh
tools/openlens/: setup.sh
tools/pacman/: setup.sh
tools/podman/: docker.sh  install_podman.cmd  setup.sh
tools/podmandesktop/: setup.sh
tools/portableapps/: setup.sh  (+4 more)
(+188 files in other folders)
